--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -79,5 +79,11 @@
   </div>
 </div>
 <% else %>
+<div class="user-container">
+<div class="user">
+<div class="user-content">
   You must sign in before you can do anything.<br>
+  </div>
+</div>
+</div>
 <% end %>
