--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
           <div><%= link_to "Home", root_path %></div>
           <div><%= link_to "Log Out", destroy_user_session_path %></div>
         <% else %>
+          <div><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, data: {turbo_method: :post} %></div>
           <div><%= link_to "Sign In", new_user_session_path %></div>
           <div><%= link_to "Sign Up", new_user_registration_path %></div>
         <% end %>
