--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,24 @@
   </head>
 
   <body>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '547460783751616',
+          xfbml      : true,
+          version    : 'v14.0'
+        });
+        FB.AppEvents.logPageView();
+      };
+
+      (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
     <div class="nav-bar">
     <div class="welcome"><h1>Welcome to Stomping Grounds<% if user_signed_in? %>, <%= link_to "#{User.find(current_user.id).name}", user_show_path(User.find(current_user.id)) %><% end %>!</h1></div>
       <div class="sign-in">
